<resources>
    <string name="app_name">Virtual Mouse</string>
    <string name="connect_button">connect</string>
    <string name="gesture_on">on</string>
    <string name="gesture_off">off</string>
    <string name="backspace"><![CDATA[←]]></string>
    <string name="windows_char">#</string>
    <string name="volume_up"><![CDATA[+]]></string>
    <string name="volume_down"><![CDATA[-]]></string>
</resources>