<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.RemoteInputClient.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="@style/Widget.Theme.RemoteInputClient.ButtonBar.Fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top">


                <EditText
                    android:id="@+id/input_address"
                    style="@style/InputAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/input_address"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="@color/white" />

                <Button
                    android:id="@+id/connect_button"
                    style="@style/ConnectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/connect_button" />

                <Button
                    android:id="@+id/gesture_button"
                    style="@style/ConnectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/gesture_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/volume_down"
                            style="@style/KeyboardButton"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/volume_down" />

                        <Button
                            android:id="@+id/volume_up"
                            style="@style/KeyboardButton"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:text="@string/volume_up" />

                    </LinearLayout>

                    <View
                        android:id="@+id/touchpad"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <View
                    android:id="@+id/scrollbar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:background="@drawable/input_address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/left_mouse"
                    style="@style/KeyboardButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/right_mouse"
                    style="@style/KeyboardButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/n1_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Button
                    android:id="@+id/n2_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <Button
                    android:id="@+id/n3_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <Button
                    android:id="@+id/n4_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <Button
                    android:id="@+id/n5_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <Button
                    android:id="@+id/n6_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <Button
                    android:id="@+id/n7_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />

                <Button
                    android:id="@+id/n8_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8" />

                <Button
                    android:id="@+id/n9_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9" />

                <Button
                    android:id="@+id/n0_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="q" />

                <Button
                    android:id="@+id/w_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="w" />

                <Button
                    android:id="@+id/e_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="e" />

                <Button
                    android:id="@+id/r_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="r" />

                <Button
                    android:id="@+id/t_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="t" />

                <Button
                    android:id="@+id/y_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="y" />

                <Button
                    android:id="@+id/u_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="u" />

                <Button
                    android:id="@+id/i_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="i" />

                <Button
                    android:id="@+id/o_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="o" />

                <Button
                    android:id="@+id/p_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="p" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/a_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="a" />

                <Button
                    android:id="@+id/s_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="s" />

                <Button
                    android:id="@+id/d_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d" />

                <Button
                    android:id="@+id/f_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="f" />

                <Button
                    android:id="@+id/g_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="g" />

                <Button
                    android:id="@+id/h_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="h" />

                <Button
                    android:id="@+id/j_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="j" />

                <Button
                    android:id="@+id/k_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="k" />

                <Button
                    android:id="@+id/l_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="l" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/z_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="z" />

                <Button
                    android:id="@+id/x_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x" />

                <Button
                    android:id="@+id/c_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="c" />

                <Button
                    android:id="@+id/v_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="v" />

                <Button
                    android:id="@+id/b_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="b" />

                <Button
                    android:id="@+id/n_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n" />

                <Button
                    android:id="@+id/m_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m" />

                <Button
                    android:id="@+id/back_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backspace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/windows_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/windows_char" />

                <Button
                    android:id="@+id/space_button"
                    style="@style/KeyboardButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="" />

                <Button
                    android:id="@+id/enter_button"
                    style="@style/KeyboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ent" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
